# openapi3.yaml
@@ -7,6 +7,31 @@ info:
     name: MIT
     url: https://opensource.org/licenses/MIT
 paths:
+  /change/interpret:
+    post:
+      operationId: interpretChange
+      summary: interpret a single osm-change into ids for registration
+      tags:
+        - change
+      requestBody:
+        required: true
+        content:
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/OsmChange'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InterpretResult'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
   /change/merge:
     post:
       operationId: mergeChanges
@@ -118,8 +143,6 @@ components:
         - $ref: '#/components/schemas/OsmWay'
     OsmChange:
       type: object
-      required:
-        - type
       properties:
         type:
           type: string
@@ -197,3 +220,24 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/externalId'
+    InterpretedMapping:
+      type: object
+      required:
+        - externalId
+        - osmId
+      properties:
+        externalId:
+          $ref: '#/components/schemas/externalId'
+        osmId:
+          $ref: '#/components/schemas/osmId'
+    InterpretResult:
+      type: object
+      properties:
+        created:
+          type: array
+          items:
+            $ref: '#/components/schemas/InterpretedMapping'
+        deleted:
+          type: array
+          items:
+            $ref: '#/components/schemas/InterpretedMapping'
